# pw

./: Cargo.toml  Dioxus.toml
assets/styling/: dx-components-theme.css  main.css
migrations/: 20251004001407_CreatePasswordEntryTable.down.sql  20251004001407_CreatePasswordEntryTable.sql  20251004001407_CreatePasswordEntryTable.up.sql  20251004002045_CreateMasterPasswordTable.down.sql  20251004002045_CreateMasterPasswordTable.up.sql
src/: main.rs  routes.rs
src/components/: mod.rs
src/components/alert/: mod.rs  style.css
src/components/button/: mod.rs  style.css
src/components/card/: mod.rs
src/components/field/: mod.rs
src/components/input/: mod.rs  style.css
src/components/navbar/: mod.rs  style.css
src/components/svgs/: eye_closed.rs  eye_open.rs  mod.rs
src/components/toasts/: mod.rs  style.css
src/models/: mod.rs
src/services/: authentication.rs  clipboard.rs  database.rs  master_password.rs  mod.rs  password_entry.rs
src/views/: create_master_password.rs  home.rs  layout.rs  login.rs  mod.rs  new_password_entry.rs  password_details.rs  vault.rs
