[package]
name = "password-manager"
version = "0.1.0"
authors = ["Jake Hathaway <jake.d.hathaway@gmail.com>"]
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
dioxus = { version = "0.7.0-rc.0", features = ["router"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1" }
directories = "6.0.0"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "migrate"] }
tokio = "1.47.1"
zeroize = "1.8.2"

[features]
default = ["desktop"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
